--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,6 +1,6 @@
 <%- include("partials/header") -%>
 
-    <h1><%= post.title %></h1>
-    <p><%= post.body %></p>
+    <h1><%= title %></h1>
+    <p><%= body %></p>
 
 <%- include("partials/footer") -%>
